# FRP-DB

./: .gitignore  Distributable  FRP.org  README.md  default.nix  frp-db.cabal  shell.nix
.direnv/: cache-pre289526.7a1fbc38a4b  drv
Report/: Declarative.org  ModularNetworkMonad.org  ModularNetworkMonad.tex  RBFrameworks.org  Report.org
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: frp-db-0.1.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-8.8.4/: frp-db-0.1.0.0-inplace.conf  package.cache
src/: BlueTeam.hs  Core.hs  Core2.hs  Generator.hs  PrizeTeam.hs  RedTeam.hs  Routing.hs  StatsTeam.hs  StreamModule.org  User.hs
