name:                frp-db
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.8

library
  default-language:    Haskell2010
  
  hs-source-dirs:      src
  exposed-modules:     Core, BlueTeam
  build-depends:       base >=4.0 && <5
                     , reflex
                     , time
                     , random
                     
  
executable frp-db
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
              -threaded
              -rtsopts
              -with-rtsopts=-N
  build-depends: base >=4.0 && <5
               , frp-db
