name:                frp-db
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.8

library
  hs-source-dirs:      src
  exposed-modules:     Core
  build-depends:       base >=4.0 && <5
                     , time
                     , random
                     , reactive-banana
                     
  
executable frp-db
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
              -threaded
              -rtsopts
              -with-rtsopts=-N
  build-depends: base >=4.0 && <5
               , frp-db
